# Cloud-Enabled-Altair-on-Azure-Sphere

./: .gitignore  .gitmodules  README.md
.github/workflows/: azure-static-web-apps-agreeable-bay-054541400.yml  azure-static-web-apps-agreeable-water-0f40e8510.yml  azure-static-web-apps-ambitious-mud-0bc0dcb00.yml  azure-static-web-apps-delightful-hill-0b2679900.yml  azure-static-web-apps-delightful-sky-00c184810.yml  azure-static-web-apps-green-hill-01166bd10.yml  azure-static-web-apps-jolly-ocean-011ae1a00.yml  azure-static-web-apps-mango-mushroom-04333d400.yml  azure-static-web-apps-orange-wave-0c7290610.yml  azure-static-web-apps-salmon-pond-06907ec10.yml  azure-static-web-apps-white-desert-05e1f0710.yml
AltairHL_emulator/: 88dcdd.c  CMakeLists.txt  app_exit_codes.h  app_manifest.json  comms_manager_wolf.c  declarations.h  main.c  memory.c  utils.c  utils.h
AltairHL_emulator/Altair8800/: 88dcdd.c
AltairHL_emulator/FrontPanels/: front_panel_retro_click.c
AltairHL_emulator/certs/: ca.crt  client.crt  client.key
AltairPY_virtual_disk_server/: PyDiskSvr.py
AltairRT_enviromon/: main.c
Altair_Deploy_OTA/: config.ps1
Altair_Web/: local.settings.json  login.html
Altair_Web_Terminal/: app.html  local.settings.json  package.json
Altair_Web_Terminal/Javascript/: app.js
Altair_Web_Terminal/api/: GetChannelId.cs  GetMqttCredentials.cs  SetChannelId.cs  local.settings.sample.json
Drivers/CLICK_4x4_KEY_74HC165/: 74HC165.c  74HC165.h  CMakeLists.txt
Drivers/CLICK_8x8_LED_MAX7219/: CMakeLists.txt  graphics.c  graphics.h  max7219.c  max7219.h
altair_azure_function_set_channel_id/: GetChannelId.cs  local.settings.sample.json
altair_javascript_terminal/Javascript/: app.js
